Change Subscribe to events table header to be Events
It's easy to miss that there are 2 events to enable since there's only
1 row. Making the header plural can help point out there are multiple.

--- a/app/views/docs/configuration.phtml
+++ b/app/views/docs/configuration.phtml
@@ -159,7 +159,7 @@ The homepage URL will appear when looking at the public page of your app. It can
 <table class="full">
     <thead>
         <tr>
-            <td>Event</td>
+            <td>Events</td>
             <td></td>
             <td></td>
         </tr>
