chore: adjust column width

--- a/app/views/docs/functions-develop.phtml
+++ b/app/views/docs/functions-develop.phtml
@@ -481,10 +481,10 @@ export default async ({ req, res, log, error }: any) => {
 </p>
 
 <p>You'll find these properties in the context object.</p>
-<table class="full text-size-small">
+<table cellspacing="0" cellpadding="0" border="0"  class="full text-size-small">
     <thead>
         <tr>
-            <td>Property</td>
+            <td style="width: 250px">Property</td>
             <td>Description</td>
         </tr>
     </thead>
