chore: adjust column width

--- a/app/views/docs/functions-develop.phtml
+++ b/app/views/docs/functions-develop.phtml
@@ -481,7 +481,7 @@ export default async ({ req, res, log, error }: any) => {
 </p>
 
 <p>You'll find these properties in the context object.</p>
-<table cellspacing="0" cellpadding="0" border="0"  class="full text-size-small">
+<table class="full text-size-small">
     <thead>
         <tr>
             <td style="width: 250px">Property</td>
@@ -504,7 +504,6 @@ export default async ({ req, res, log, error }: any) => {
         <tr>
             <td><code>error()</code></td>
             <td>Methoc to log errors to the Appwrite Console, end users will not be able to see these errors. See full examples <a href="#logging">here</a>.</td>
-            <td></td>
         </tr>
     </tbody>
 </table>
