fix: missing quote

--- a/app/views/docs/functions-develop.phtml
+++ b/app/views/docs/functions-develop.phtml
@@ -996,7 +996,7 @@ end</code></pre>
         case 'empty':
             return res.empty();
         case 'json':
-            return res.json({type": "This is a JSON response"});
+            return res.json({"type": "This is a JSON response"});
         case 'redirect':
             return res.redirect("https://appwrite.io", 301);
         case 'html':
@@ -1174,7 +1174,7 @@ namespace runtime {
         case 'empty':
             return res.empty();
         case 'json':
-            return res.json({type": "This is a JSON response"});
+            return res.json({"type": "This is a JSON response"});
         case 'redirect':
             return res.redirect("https://appwrite.io", 301);
         case 'html':
