--- a/app/views/docs/functions-develop.phtml
+++ b/app/views/docs/functions-develop.phtml
@@ -1707,7 +1707,7 @@ namespace runtime {
             </td>
             <td><b>Deno</b></td>
             <td><a href="https://deno.land/" target="_blank">deno</a></td>
-            <td><code>deno install</code></td>
+            <td><code>deno cache &ltENTRYPOINT_FILE&gt</code></td>
         </tr>
         <tr>
             <td>
