--- a/app/views/docs/functions-develop.phtml
+++ b/app/views/docs/functions-develop.phtml
@@ -2843,7 +2843,7 @@ export default function ({res}: {res: any}) {
 
     <ol class="margin-top margin-bottom-large text-size-normal">
         <li>
-            Your old function from 1.3 is marked read-only, but will continue to work.
+            Your old function from 1.3 will continue to work, but it can't be updated directly to a 1.4 function.
             You need to create a new function following 1.4 syntax. 
             After you've created your new function, point your application code to the new function and delete the old function.
         </li>
